fixed button spacing for companies section and when button is selected only one button should be highlighted, also categorized companies

--- a/src/components/About/Companies/Companies.scss
+++ b/src/components/About/Companies/Companies.scss
@@ -6,16 +6,27 @@
   }
   .button-display {
     .svg-button {
-      width: 100%;
-      height: 100%;
       padding: 4px;
       color: white;
       border: 2px solid white;
       border-radius: 4px;
       cursor: pointer;
-      font-size: 14px;
       text-align: center;
       box-sizing: border-box;
+      overflow: hidden;
+      white-space: nowrap;
+      text-overflow: ellipsis;
+      width: 100%;
+      height: 100%;
+
+      display: flex;
+      align-items: center;
+      justify-content: center;
+
+      p {
+        padding: 0;
+        font-size: 18px;
+      }
 
       &:hover {
         border: 2px solid #6ee7b7;
